--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,7 @@ DB_HOST=localhost
 DB_USERNAME=root
 DB_PASSWORD=password
 DB_NAME=DevConnect
+
+CLOUDINARY_CLOUD_NAME=fdgfhdaty
+CLOUDINARY_API_KEY=1234567890123456
+CLOUDINARY_API_SECRET=gfgiahrgaihadfhgoihw
