feat: add email verification

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,8 @@ DB_NAME=DevConnect
 CLOUDINARY_CLOUD_NAME=fdgfhdaty
 CLOUDINARY_API_KEY=1234567890123456
 CLOUDINARY_API_SECRET=gfgiahrgaihadfhgoihw
+
+SMTP_HOST=smtp.mailtrap.io
+SMTP_PORT=587
+SMTP_USERNAME=1a2b3c4d5e6f7g
+SMTP_PASSWORD=1a2b3c4d5e6f7g
